compiler/test/conformance/testdata/errors/13_use_before_init.yz
Bar: { f String }

main: {
    b : Bar()
    print(b.f)
}
